Fix alignment and spacing issues

--- a/src/Actions.css
+++ b/src/Actions.css
@@ -1,7 +1,9 @@
 ol {
+    padding-left: 30px;
     padding-top: 10px;
 }
 
 li {
+    padding-top: 10px;
     padding-left: 10px;
 }
