--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ header {
     padding: 2px 2px 2px 2px
 }
 .playerInfo {
+    padding-left: 15px;
     padding-bottom: 5px;
     font-weight: bold
 }
